syntax = "proto3";
package xsuportal.proto.resources;
option go_package = "github.com/isucon/isucon10-final/proto/resources";

message Contestant {
  int64 id = 1;
  int64 team_id = 2;
  string name = 3;
  message ContestantDetail {
    string github_login = 1;
    string discord_tag = 2;
    bool is_student = 3;
    string avatar_url = 4;
  }
  ContestantDetail contestant_detail = 7;
}
