syntax = "proto3";
package xsuportal.proto.services.admin;
option go_package = "github.com/isucon/isucon10-final/proto/services/common";

message InitializeRequest {}

message InitializeResponse { string language = 1; }
